--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -30,6 +30,8 @@ COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/dist ./dist
 COPY --from=build /usr/src/app/prisma ./prisma
 
+RUN chmod 777 /prisma/dev.db
+
 ENV NODE_ENV=production
 
 USER node
