chore: Update permissions for prisma folder in dockerfile.prod

--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -30,7 +30,7 @@ COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/dist ./dist
 COPY --from=build /usr/src/app/prisma ./prisma
 
-RUN chmod 777 /usr/src/app/prisma/dev.db
+RUN chmod 777 /usr/src/app/prisma
 
 ENV NODE_ENV=production
 
